-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256608 | 11.0.11-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8258992 | 11.0.11 | Nick Gasson | P4 | Resolved | Fixed | b01 |
To reproduce the issue, I run with:
-XX:+UnlockExperimentalVMOptions
-XX:TieredStopAtLevel=1 -XX:+PatchALot
The error is:
# Internal Error (home/stumon01/repos/jdk/src/hotspot/share/compiler/oopMap.cpp:199), pid=27161, tid=27223
# fatal error: OopMap inserted twice
Some stack trace:
V [libjvm.so+0xe210d4] OopMapSet::add_gc_map(int, OopMap*)+0x11c
V [libjvm.so+0x6ec7ec] DebugInformationRecorder::add_oopmap(int, OopMap*)+0x28
V [libjvm.so+0x6ec86c] DebugInformationRecorder::add_safepoint(int, OopMap*)+0x74
V [libjvm.so+0x4f2d64] CodeEmitInfo::record_debug_info(DebugInformationRecorder*, int)+0x30
V [libjvm.so+0x511598] LIR_Assembler::add_call_info(int, CodeEmitInfo*)+0x40
V [libjvm.so+0x51e0fc] LIR_Assembler::throw_op(LIR_OprDesc*, LIR_OprDesc*, CodeEmitInfo*)+0x150
V [libjvm.so+0x51299c] LIR_Assembler::emit_op2(LIR_Op2*)+0x46c
V [libjvm.so+0x5092f0] LIR_Op2::emit_code(LIR_Assembler*)+0x1c
V [libjvm.so+0x511344] LIR_Assembler::emit_lir_list(LIR_List*)+0x1ac
V [libjvm.so+0x511188] LIR_Assembler::emit_block(BlockBegin*)+0x190
V [libjvm.so+0x510fa8] LIR_Assembler::emit_code(BlockList*)+0x68
V [libjvm.so+0x4c8ec8] Compilation::emit_code_body()+0x108
This occurs with ZGC and G1 tested on jdk/jdk, not only on ZGC as I first thought.
-XX:+UnlockExperimentalVMOptions
-XX:TieredStopAtLevel=1 -XX:+PatchALot
The error is:
# Internal Error (home/stumon01/repos/jdk/src/hotspot/share/compiler/oopMap.cpp:199), pid=27161, tid=27223
# fatal error: OopMap inserted twice
Some stack trace:
V [libjvm.so+0xe210d4] OopMapSet::add_gc_map(int, OopMap*)+0x11c
V [libjvm.so+0x6ec7ec] DebugInformationRecorder::add_oopmap(int, OopMap*)+0x28
V [libjvm.so+0x6ec86c] DebugInformationRecorder::add_safepoint(int, OopMap*)+0x74
V [libjvm.so+0x4f2d64] CodeEmitInfo::record_debug_info(DebugInformationRecorder*, int)+0x30
V [libjvm.so+0x511598] LIR_Assembler::add_call_info(int, CodeEmitInfo*)+0x40
V [libjvm.so+0x51e0fc] LIR_Assembler::throw_op(LIR_OprDesc*, LIR_OprDesc*, CodeEmitInfo*)+0x150
V [libjvm.so+0x51299c] LIR_Assembler::emit_op2(LIR_Op2*)+0x46c
V [libjvm.so+0x5092f0] LIR_Op2::emit_code(LIR_Assembler*)+0x1c
V [libjvm.so+0x511344] LIR_Assembler::emit_lir_list(LIR_List*)+0x1ac
V [libjvm.so+0x511188] LIR_Assembler::emit_block(BlockBegin*)+0x190
V [libjvm.so+0x510fa8] LIR_Assembler::emit_code(BlockList*)+0x68
V [libjvm.so+0x4c8ec8] Compilation::emit_code_body()+0x108
This occurs with ZGC and G1 tested on jdk/jdk, not only on ZGC as I first thought.
- backported by
-
JDK-8256608 AArch64 C1 OopMap inserted twice fatal error
-
- Resolved
-
-
JDK-8258992 AArch64 C1 OopMap inserted twice fatal error
-
- Resolved
-
- duplicates
-
JDK-8247202 [aarch64] fatal error: OopMap inserted twice
-
- Closed
-