8237483: AArch64 C1 OopMap inserted twice fatal error

Reviewed-by: aph